changed hosting to imgBox

--- a/Projects/JS/weather_app_p1/index.html
+++ b/Projects/JS/weather_app_p1/index.html
@@ -80,7 +80,7 @@
       <img
         style="filter: grayscale(100%)"
         class="paper-plane"
-        src="https://gdurl.com/I0q8"
+        src="https://images2.imgbox.com/10/18/m6UNxUF5_o.png"
         alt="plane"
       />
       <svg id="plane-path-svg" width="70%" height="70%" viewBox="0 0 600 600">
