--- a/Projects/JS/weather_app_p1/samrajya_neupane_2408842.html
+++ b/Projects/JS/weather_app_p1/samrajya_neupane_2408842.html
@@ -1,10 +1,12 @@
+<!-- Samrajya Neupane 2408842 -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🌡 Weather App ☁</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="samrajya_neupane_2408842.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/MotionPathPlugin.min.js"
@@ -12,7 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script defer src="script.js"></script>
+    <script defer src="samrajya_neupane_2408842.js"></script>
   </head>
   <body>
     <!-- main card -->
@@ -92,5 +94,6 @@
         />
       </svg>
     </div>
+    <footer>&copy; Samrajya Neupane 2408842</footer>
   </body>
 </html>
