--- a/Projects/JS/weather_app_p1/samrajya_neupane_2408842.html
+++ b/Projects/JS/weather_app_p1/samrajya_neupane_2408842.html
@@ -76,7 +76,7 @@
       placeholder="Search..."
     />
 
-    <!-- search bar / plane -->
+    <!-- search icon / plane -->
 
     <div class="plane-container">
       <img
