--- a/weather_app_p2/samrajya_neupane_2408842.html
+++ b/weather_app_p2/samrajya_neupane_2408842.html
@@ -53,7 +53,17 @@ Student's ID: 2408842
             <span class="wind"></span>
           </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+          <div class="slider">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -70,16 +80,14 @@ Student's ID: 2408842
     <!-- background blob -->
 
     <div class="blob"></div>
-    <form action="samrajya_neupane_2408842.php">
-      <input
-        type="text"
-        autofocus
-        tabindex="1"
-        name="city"
-        class="search-input"
-        placeholder="Search..."
-      />
-    </form>
+    <input
+      type="text"
+      autofocus
+      tabindex="1"
+      name="city"
+      class="search-input"
+      placeholder="Search..."
+    />
 
     <!-- search icon / plane -->
 
