--- a/weather_app_p2/index.html
+++ b/weather_app_p2/index.html
@@ -107,6 +107,9 @@ Student's ID: 2408842
         />
       </svg>
     </div>
+
+    <!-- copyright section -->
+
     <footer>&copy; Samrajya Neupane 2408842</footer>
   </body>
 </html>
